# ExamenParcial3_NoVinculante

./: Asistencia.h  CMakeLists.txt  Estudiante.cpp  Estudiante.h  README.md  main.c  main.cpp  main.h
c/: CMakeLists.txt  main.c
cpp/: Asistencia.cpp  Asistencia.h  CMakeLists.txt  Estudiante.cpp  Estudiante.h  main.cpp
estudiante/: estudiante.c  estudiante.h
